# pyCrypto

./: .gitignore  README.md
bcscratch/: README.md  pyproject.toml
bcscratch/bcscratch/: block.py  blockchain.py  connections.py  echo_server.py  messages.py  node.py  peers.py  ping.py  protocol.py  server.py  transactions.py  utils.py
bcscratch/demos/: async_demo.py  chat_server.py
bcscratch/notebooks/: the_1st_note.ipynb
bcscratch/tests/: test_bcscratch.py  test_block.py  test_blockchain.py  test_digital_signing.py  test_get_bitcoin_price.py  test_hashing.py  test_peers.py  test_proof_of_work.py  test_pub_pri_authentication.py  test_transactions.py
blockchain/: README.md  pyproject.toml
blockchain/blockchain.egg-info/: PKG-INFO  SOURCES.txt
blockchain/notebooks/: README.md
blockchain/src/blockchain/: __init__.py  app.py  lib.py
blockchain/tests/: test_blockchain_lib.py
entropy/: README.md
