[tool.poetry]
name = "bcscratch"
version = "0.1.0"
description = ""
authors = ["Wei Ning (DA) <wei.ning@digitalasset.com>"]

[tool.poetry.dependencies]
python = "^3.8"
# general house-keeping
pylint = "^2.9.3"
mypy = "^0.910"
yapf = "^0.31.0"
# for note-taking
jupyter = "^1.0.0"
# needed by the project
requests = "^2.26.0"
# to demo image-hashing (matplotlib brings in PIL)
matplotlib = "^3.4.2"
# for public-private key authentication and digital signing
pynacl = "^1.4.0"
# logging lib
structlog = "^21.1.0"
# allow colorful output in logging
colorama = "^0.4.4"
# validate data structures such as JSON messages (the transactions)
marshmallow = "^3.12.2"
marshmallow-oneofschema = "^3.0.1"
# async HTTP client - need this to find our public IP address
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
