[tool.poetry]
name = "blockchain"
version = "0.1.0"
description = ""
authors = ["Wei Ning <macgnw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Flask = "0.12.2" 
requests = "2.18.4" 

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
main = "blockchain:main"
