[tool.poetry]
name = "blockchain"
version = "0.1.0"
description = ""
authors = ["Wei Ning <macgnw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyinstaller = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "5.3.2"
Flask = "2.2.5" 
requests = "2.18.4" 

[tool.poetry.scripts]
main = "blockchain.app:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

